Build kdetrunk release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kdevelop-pg-qt (0.9.0-1) UNRELEASED; urgency=low
+kdevelop-pg-qt (0.9.0-0r1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #578240)
 
