--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 kdevelop-pg-qt (0.9.5-2) UNRELEASED; urgency=low
 
+  * Fix a couple of portability issues (armel, all big endian arches). This
+    should enable kdevelop-php to build on them (fix_portability_issues.diff).
 
  -- Modestas Vainius <modax@debian.org>  Mon, 06 Jun 2011 02:15:57 +0300
 
