add a watch file

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ kdevelop-pg-qt (1.0.0-0r0) UNRELEASED; urgency=low
   [ Andreas Cord-Landwehr ]
   * Remove patch fix_portability_issues.diff (applied upstream).
 
+  [ Pino Toscano ]
+  * Add a watch file.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 30 Jan 2012 21:38:08 +0100
 
 kdevelop-pg-qt (0.9.5-2) unstable; urgency=low
